src/components/Catalog.css
.catalog__help {
    /*color: var(--pf-c-form__group-label-help--Color);*/
    color: #B8BBBE;
    height: 0.8em;
}

.catalog__step {
    border-radius: 15px;
    cursor: grab;
}

.catalog__stepImage {
    height: 75px;
    width: 75px;
    align-items: center;
    border-right: 1px solid #DDDDDD;
    justify-content: center;
    padding: 15px;
    position: relative;
}

.catalog__toolbar {
    background: transparent !important;
    /*display: flex;*/
    /*align-items: center;*/
    /*justify-content: center;*/
    padding-top: 0;
}

.catalog__toolbarContent {
    padding: 5px;
}

/* MINI CATALOG */

/* Mini Catalog Search */
.miniCatalog__search.pf-c-toolbar__item {
    width: 100%;
}

/* Mini Catalog Step (from list) */

.miniCatalog__stepItem {
    padding: 0;
}

button.miniCatalog__stepItem.pf-c-button.pf-m-tertiary {
    --pf-c-button--after--BorderColor: transparent;
    width: 100%;
}

button.miniCatalog__stepItem:hover {
    background: #F5F5F5;
}

.miniCatalog__stepItem__grid {
    font-size: smaller;
    line-height: 40px;
    padding: 2px;
}

.miniCatalog__stepImage {
    height: 40px;
    width: 40px;
    padding: 0 5px;
}

